; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libmpg123/extr_readers.c_bc_seekback.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libmpg123/extr_readers.c_bc_seekback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bufferchain = type { i64 }

@READER_ERROR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.bufferchain*, i64)* @bc_seekback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @bc_seekback(%struct.bufferchain* %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.bufferchain*, align 8
  %5 = alloca i64, align 8
  store %struct.bufferchain* %0, %struct.bufferchain** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = icmp sge i64 %6, 0
  br i1 %7, label %8, label %20

8:                                                ; preds = %2
  %9 = load i64, i64* %5, align 8
  %10 = load %struct.bufferchain*, %struct.bufferchain** %4, align 8
  %11 = getelementptr inbounds %struct.bufferchain, %struct.bufferchain* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp sle i64 %9, %12
  br i1 %13, label %14, label %20

14:                                               ; preds = %8
  %15 = load i64, i64* %5, align 8
  %16 = load %struct.bufferchain*, %struct.bufferchain** %4, align 8
  %17 = getelementptr inbounds %struct.bufferchain, %struct.bufferchain* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = sub nsw i64 %18, %15
  store i64 %19, i64* %17, align 8
  store i64 %19, i64* %3, align 8
  br label %22

20:                                               ; preds = %8, %2
  %21 = load i64, i64* @READER_ERROR, align 8
  store i64 %21, i64* %3, align 8
  br label %22

22:                                               ; preds = %20, %14
  %23 = load i64, i64* %3, align 8
  ret i64 %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
